<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="80dp"
            android:minHeight="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/quizruslogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <TextView
                android:id="@+id/quizMakeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_questions"
                android:textColor="@color/colorWhite"
                android:textSize="40dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/question"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textSize="40sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/QuestionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CorrectAnswerHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/correct_answer"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textSize="40sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CorrectAnswerInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/WrongAnswerHolderOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/wrong_answer"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textSize="40sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/WrongAnswerInputOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/WrongAnswerHolderTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/wrong_answer"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textSize="40sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/WrongAnswerInputTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/WrongAnswerHolderThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/grey_borderless_background"
                android:gravity="center"
                android:hint="@string/wrong_answer"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorHint"
                android:textSize="40sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/WrongAnswerInputThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/save_question"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="40sp" />

            <Button
                android:id="@+id/buttonDoneEditQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="40sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>