<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonBackCreateQuiz"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:maxHeight="80dp"
            android:minHeight="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/quizruslogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonBackCreateQuiz"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/quizMakeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/quiz_create"
            android:textColor="@color/colorWhite"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quizMakeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/quiz_name"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/QuizNameHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/grey_borderless_background"
            android:hint="..."
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorWhite"
            android:textSize="40sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/QuizNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/NumQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time_seconds"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TimerHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/grey_borderless_background"
            android:hint="..."
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorWhite"
            android:textSize="40sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TimerInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonEditQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="80dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/edit_questions"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="40sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>