...
            android:layout_marginEnd="40dp"
            android:maxHeight="80dp"
            android:minHeight="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/quizruslogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/newQuizButton"
            app:layout_constraintStart_toEndOf="@+id/accountImageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/newQuizButton"
            android:layout_width="wrap_content"
...
